<resources>
    <string name="app_name">Zang</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity">Activity</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_recipients">Recipients</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_new_account">Add Recipient</string>
    <string name="enter_full_name_of_account">Enter full name of Account</string>
    <string name="country">Country</string>
    <string name="bank_name">Bank Name</string>
    <string name="type_to_search_for_bank">Type to search for Bank</string>
    <string name="account">Account #</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="re_enter">Re-enter #</string>
    <string name="re_enter_account_number">Re - Enter Account Number</string>
    <string name="save">Save</string>
    <string name="error_enter_account_name">Please enter account full name</string>
    <string name="error_enter_account_number">Please enter Account Number</string>
    <string name="error_account_number_match">Account Number must match</string>
    <string name="nigeria">Nigeria</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="naira_sign">₦</string>
    <string name="USD_sign">$</string>

    <string-array name="african_countries_array">
        <item>Nigeria</item>
        <item>Other Countries soon</item>
    </string-array>

    <string-array name="countries_array">
        <item>United States</item>
    </string-array>
    <string name="title_activity_review_transaction">ReviewTransactionActivity</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_transaction">Confirm Transaction</string>
    <string name="password">Password</string>
    <string name="pay_with">Pay with</string>
    <string name="ok">Ok</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="to">To</string>
    <string name="logout">Logout</string>
    <string name="personal_info">Personal Info</string>
    <string name="banks_and_cards">Banks and Cards</string>
    <string name="title_activity_personal_info">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="email">email</string>
    <string name="title_activity_bank_card">BankCardActivity</string>
</resources>
