<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:mContext="com.kelvingabe.kelvinoguno.prjtacos.MainActivity">
    <item
        android:id="@+id/action_bank_cards"
        android:orderInCategory="100"
        android:title="@string/banks_and_cards"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_personal_info"
        android:orderInCategory="200"
        android:title="@string/personal_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="300"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>