<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".controller.PersonalInfoActivity"
    tools:showIn="@layout/activity_personal_info">

    <EditText
        android:id="@+id/personal_info_name_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/personal_info_email_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_info_name_editText" />

    <EditText
        android:id="@+id/personal_info_phone_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/personal_info_code_textView"
        app:layout_constraintTop_toBottomOf="@+id/personal_info_email_editText" />

    <ImageView
        android:id="@+id/personal_info_flag_imageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/personal_info_phone_editText"
        app:layout_constraintEnd_toStartOf="@+id/personal_info_code_textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/personal_info_phone_editText"
        app:srcCompat="@drawable/us_flag" />

    <TextView
        android:id="@+id/personal_info_code_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="+1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/personal_info_phone_editText"
        app:layout_constraintEnd_toStartOf="@+id/personal_info_phone_editText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/personal_info_flag_imageView"
        app:layout_constraintTop_toTopOf="@+id/personal_info_phone_editText" />

    <Button
        android:id="@+id/personal_info_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCancelClicked"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/personal_info_save_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/personal_info_save_button" />

    <Button
        android:id="@+id/personal_info_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="onSaveClicked"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/personal_info_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/personal_info_phone_editText" />

    <TextView
        android:id="@+id/personal_info_warning_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Your name must match the name on your cards in accordance with anti money laundering laws."
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_info_cancel_button" />
</androidx.constraintlayout.widget.ConstraintLayout>